# Sideloadtool

./: 2.patch  3.patch  BUGFIX_USBMUXD_INTEGRATION.md  BUILD_NATIVE.md  FIXES.md  FIX_NOTES.md  README-BUILD.md  README-FIX.md  README.md  ROOT_CAUSE_ANALYSIS_AND_FIX.md  TERMUX_API_NOTE.md  build-android.sh  build.gradle  build.gradle.kts  gradle.properties  gradlew  proguard-rules.pro  settings.gradle  settings.gradle.kts
.github/workflows/: buildapk.yml
app/: build.gradle.kts  proguard-rules.pro  python-config.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.md  README_FIX_v32.md  afc.c  afc.h  android_usbmuxd_fix.c  android_usbmuxd_fix.h  install_proxy.c  install_proxy.h  jni_bridge.c  jni_bridge_imd.c  jni_bridge_imd.c.bak  lockdown.c  lockdown.h  pairing.c  pairing.h  plist_util.c  plist_util.h  usb_fd_bridge.c  usb_fd_bridge.c.bak  usb_fd_bridge.h  usb_fd_bridge.h.bak  usbmux.c  usbmux.h  usbmuxd_server.c  usbmuxd_server.h  uuid_compat.h
app/src/main/cpp/prebuilt/arm64-v8a/include/openssl/: configuration.h
app/src/main/cpp/prebuilt/arm64-v8a/lib/: libimobiledevice-1.0.la  libimobiledevice-glue-1.0.la  libplist++-2.0.la  libplist-2.0.la  libusb-1.0.la  libusbmuxd-2.0.la
app/src/main/cpp/prebuilt/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libimobiledevice-1.0.pc  libimobiledevice-glue-1.0.pc  libplist++-2.0.pc  libplist-2.0.pc  libssl.pc  libusb-1.0.pc  libusbmuxd-2.0.pc  openssl.pc
app/src/main/cpp/prebuilt/x86_64/include/openssl/: configuration.h
app/src/main/cpp/prebuilt/x86_64/lib/: libimobiledevice-1.0.la  libimobiledevice-glue-1.0.la  libplist++-2.0.la  libplist-2.0.la  libusb-1.0.la  libusbmuxd-2.0.la
app/src/main/cpp/prebuilt/x86_64/lib/pkgconfig/: libcrypto.pc  libimobiledevice-1.0.pc  libimobiledevice-glue-1.0.pc  libplist++-2.0.pc  libplist-2.0.pc  libssl.pc  libusb-1.0.pc  libusbmuxd-2.0.pc  openssl.pc
app/src/main/java/com/superalpha/sideload/: MainActivity.kt  SuperAlphaApp.kt
app/src/main/java/com/superalpha/sideload/bridge/: AppConfig.kt  AppPaths.kt  CertHelper.kt  DeviceNative.kt  NativeBridge.kt  NativeLog.kt  TlsHelper.kt  UiPrompt.kt  UsbBridgeService.kt  UsbPermissionManager.kt  UsbReconnectManager.kt  UsbTransport.kt
app/src/main/java/com/superalpha/sideload/python/: PythonBridge.kt
app/src/main/java/com/superalpha/sideload/ui/: HomeViewModel.kt  LogConsole.kt  Navigation.kt  PairingScreen.kt  PromptDialog.kt  RegisterDeviceScreen.kt  RevokeCertsScreen.kt  SettingsScreen.kt  SideloadScreen.kt
app/src/main/java/com/superalpha/sideload/ui/theme/: Theme.kt
app/src/main/python/: apple_auth.py  config_manager.py  developer_api.py  device_link.py  mux_usb.py  sideload_core.py  utils.py
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: device_filter.xml  file_paths.xml
patch/: 01.patch  02.patch  03.patch  04.patch  05.patch  readme.md
patches/: 1.patch  libimobiledevice-0001-idevice-direct-udid.patch  libimobiledevice-0002-socket-android-env.patch  libimobiledevice-android.patch  libusbmuxd-0001-fix-android-unix-path.patch  libusbmuxd-android.patch
scripts/: build_all.sh
